--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-setuptools==59.5.*
+setuptools
 opencv-python
 opencv-contrib-python
 prettytable
@@ -10,15 +10,15 @@ munkres
 chumpy
 trimesh
 shyaml
-PyYAML==5.4.1
-numpy==1.22.0
+PyYAML
+numpy
 numpy-quaternion
 pygame
 keyboard
 transforms3d
 bvhtoolbox
 vedo
-imgaug==0.4.0
+imgaug
 tensorboard
 smplx
 pycocotools
